--- a/index.html
+++ b/index.html
@@ -13,38 +13,14 @@
 		<nav>
 			<ul>
 				<li><a href="/">Main</a></li>
-				<li><a href="/books">Books</a></li>
+				<li><a href="/blog">Blog</a></li>
 
 			</ul>
 		</nav>
 		<ng-view></ng-view>
-
-
-		<div ng-controller="Search">
-			<div class="form-group">
-				<input type="text" class="form-control" ng-model="searchString">
-			</div>
-
-			<button class="btn btn-primary" ng-click="search()">Search</button>
-			
-		</div>
-
-		<div ng-controller="Main">
-
-			{{message}}
-		
-			<ng-include src="'js/views/inner.html'"></ng-include>	
-		</div>
 	
 	</div>
-	
-	<!-- <script src="node_modules/angular/angular.min.js"></script>
-	<script src="node_modules/angular-route/angular-route.min.js"></script> -->
+
 	<script src="/bundle.js"></script>
-	<!-- <script src="js/app.js"></script>
-	<script src="js/controllers/MainCtrl.js"></script>
-	<script src="js/controllers/InnerCtrl.js"></script>
-	<script src="js/controllers/SearchCtrl.js"></script>
-	<script src="js/controllers/BooksCtrl.js"></script> -->
 </body>
 </html>
