--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 		<div ng-view></div>
 	
 	</div>
-	<script src="/bundle.js"></script>
+	<script src="/assets/bundle.js"></script>
 </body>
 </html>
