--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>AngularJS</title>
 	<link rel="stylesheet" href="/node_modules/angular-material/angular-material.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
 	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
 <body>
@@ -13,8 +13,8 @@
 		<nav>
 			<ul>
 				<li><a href="/">Main</a></li>
-				<li><a href="#/blog">Blog</a></li>
-
+				<li><a href="/blog">Blog</a></li>
+				<li><a href="/menu">Menu</a></li>
 			</ul>
 		</nav>
 		<div ng-view></div>
